Add encrypted root partition

--- a/arch_install/roles/bootloader/templates/arch_lts_entry.j2
+++ b/arch_install/roles/bootloader/templates/arch_lts_entry.j2
@@ -2,4 +2,4 @@ title          Arch Linux LTS
 linux          /vmlinuz-linux-lts
 initrd         /intel-ucode.img
 initrd         /initramfs-linux-lts.img
-options        root=PARTUUID={{ sys_partuuid }} rw rootflags=subvol=ROOT
+options        rd.luks.uuid={{ sys_uuid }} rd.luks.name={{ sys_uuid }}=cryptroot root=/dev/mapper/cryptroot rw rootflags=subvol=ROOT rd.luks.options=discard
