--- a/arch_install/roles/bootloader/templates/arch_entry.j2
+++ b/arch_install/roles/bootloader/templates/arch_entry.j2
@@ -1,12 +1,12 @@
 {% if 'lts' in item %}
 title          Arch Linux LTS
 linux          /vmlinuz-linux-lts
-initrd         /intel-ucode.img
+initrd         /{{ cpu_vendor }}-ucode.img
 initrd         /initramfs-linux-lts.img
 {% else %}
 title          Arch Linux
 linux          /vmlinuz-linux
-initrd         /intel-ucode.img
+initrd         /{{ cpu_vendor }}-ucode.img
 initrd         /initramfs-linux.img
 {% endif %}
 options        rd.luks.name={{ sys_uuid }}=cryptlvm root=/dev/vg.main/root resume=/dev/vg.main/swap rw rd.luks.options=discard systemd.unified_cgroup_hierarchy=1
